--- a/index.html
+++ b/index.html
@@ -17,95 +17,95 @@
         <main>
             <table class="zakus">
                 <caption>Закуски к пиву</caption>
-                <tr><td>Пивной сет №1....................................................135гр./<strong>190р.</strong></td></tr>
+                <tr><td>Пивной сет №1....................................................135гр./<strong>230р.</strong></td></tr>
                 <tr><td class="opis">Соломка, фисташки, луковые кольца, арахис с васаби</td></tr>
-                <tr><td>Пивной сет №2....................................................140гр./<strong>190р.</strong></td></tr>
+                <tr><td>Пивной сет №2....................................................140гр./<strong>230р.</strong></td></tr>
                 <tr><td class="opis">Фисташки, чипсы, арахис, гренки</td></tr>
-                <tr><td>Пивной сет №3...................................................280гр./<strong>260р.</strong></td></tr>
+                <tr><td>Пивной сет №3...................................................280гр./<strong>280р.</strong></td></tr>
                 <tr><td class="opis">Колбаски охотничьи, квашенная капуста, чесночные гренки<br> Соус: хрен, горчица</td></tr>
-                <tr><td>Источник йода...................................................320гр./<strong>260р.</strong></td></tr>
+                <tr><td>Источник йода...................................................320гр./<strong>280р.</strong></td></tr>
                 <tr><td class="opis">Филе сельди, маринованный лук, золотистый картофель,<br> свежая зелень</td></tr>
             </table>
             <br>
             <table>
                 <caption>Сендвичи</caption>
-                <tr><td>Двойные связи..................................................350гр./<strong>300р.</strong></td></tr>
+                <tr><td>Двойные связи..................................................350гр./<strong>330р.</strong></td></tr>
                 <tr><td class="opis">Хлеб harry's, куриное филе, бекон, капуста пекинская, томат, <br>огурец, яйцо, сыр </td></tr>
-                <tr><td>Углеродные цепи..............................................350гр./<strong>270р.</strong></td></tr>
+                <tr><td>Углеродные цепи..............................................350гр./<strong>310р.</strong></td></tr>
                 <tr><td class="opis">Хлеб harry's, говяжья котлета, яйцо, сыр эменталлер,<br> томат, соус Тар-тар, соус барбекю, картофель фри</td></tr>
             </table>
             <br>
             <table>
                 <caption>Бургеры</caption>
-                <tr><td>Магистр наук........................................................400гр./<strong>290р.</strong></td></tr>
+                <tr><td>Магистр наук........................................................400гр./<strong>340р.</strong></td></tr>
                 <tr><td class="opis">Булочка домашняя, говяжья котлета, томат, сыр эменталлер,<br>соус Тар-тар, соус сырный, картофель фри</td></tr>
-                <tr><td>Угольный эксперимент.....................................400гр./<strong>330р.</strong></td></tr>
+                <tr><td>Угольный эксперимент.....................................400гр./<strong>360р.</strong></td></tr>
                 <tr><td class="opis">Булочка домашняя, говяжья котлета, огурец маринованный, томат,<br>сыр эменталлер, соус Тар-тар, соус брусничный, картофель фри</td></tr>
             </table>
             <br>
             <table>
                 <caption>Пиццы</caption>
-                <tr><td>Маргарита..........................................................400гр./<strong>300р.</strong></td></tr>
+                <tr><td>Маргарита..........................................................400гр./<strong>370р.</strong></td></tr>
                 <tr><td class="opis">Соус, свежие томаты, моцарелла, прованские травы</td></tr>
-                <tr><td>Пеперони............................................................400гр./<strong>370р.</strong></td></tr>
+                <tr><td>Пеперони............................................................400гр./<strong>410р.</strong></td></tr>
                 <tr><td class="opis">Острый соус, салями, болгарский перец, моцарелла</td></tr>
-                <tr><td>Четыре сезона..................................................400гр./<strong>400р.</strong></td></tr>
+                <tr><td>Четыре сезона..................................................400гр./<strong>430р.</strong></td></tr>
                 <tr><td class="opis">Грибы, помидоры, салями, курица, моцарелла, соус</td></tr>
-                <tr><td>Гавайская...........................................................400гр./<strong>370р.</strong></td></tr>
+                <tr><td>Гавайская...........................................................400гр./<strong>420р.</strong></td></tr>
                 <tr><td class="opis">Соус, сыр моцарелла, куриное филе, кольца ананаса, сыр пармезан,<br> прованские травы</td></tr>
-                <tr><td>Карбонара..........................................................400гр./<strong>370р.</strong></td></tr>
+                <tr><td>Карбонара..........................................................400гр./<strong>420р.</strong></td></tr>
                 <tr><td class="opis">Бекон, шампиньоны, моцарелла, соус</td></tr>
             </table>
             <br>
             <table class="salat">
                 <caption>Салаты</caption>
-                <tr><td>Цезарь с курицей..............................................250гр./<strong>290р.</strong></td></tr>
+                <tr><td>Цезарь с курицей..............................................250гр./<strong>330р.</strong></td></tr>
                 <tr><td class="opis">Микс салата романо и айсберг, соус цезарь, куриное филе, <br> помидоры черри, сухарики, перепелиные яйца, пармезан</td></tr>
-                <tr><td>Цезарь с креветкой...........................................250гр./<strong>350р.</strong></td></tr>
+                <tr><td>Цезарь с креветкой...........................................250гр./<strong>370р.</strong></td></tr>
                 <tr><td class="opis">Микс салата романо и айсберг, соус цезарь, <br> королевские креветки, помидоры черри, сухарики, <br> перепелиные яйца, пармезан</td></tr>
-                <tr><td>Греческий...........................................................200гр./<strong>220р.</strong></td></tr>
+                <tr><td>Греческий...........................................................200гр./<strong>260р.</strong></td></tr>
                 <tr><td class="opis">Свежие огурцы, помидоры, болгарский перец, маслины, <br>сыр фета, бальзамический уксус, сок лайма, <br> прованские травы, оливковое масло</td></tr>
-                <td>Cалат теплый с говядиной............................200гр./<strong>220р.</strong></td></tr>
+                <td>Cалат теплый с говядиной............................200гр./<strong>260р.</strong></td></tr>
                 <tr><td class="opis">Помидоры, красный лук, маслины, говяжья вырезка<br> бальзамический крем, прованские травы,<br> кунжутная заправка</td></tr>
-                <tr><td>Салат Капрезе..................................................200гр./<strong>285р.</strong></td></tr>
+                <tr><td>Салат Капрезе..................................................200гр./<strong>310р.</strong></td></tr>
                 <tr><td class="opis">Микс салата романо и айсберг, сыр моцарелла,<br> свежие томаты, соус песто, бальзамический крем,<br> прованские травы, кедровый орех</td></tr>
             </table>
             <br>
             <table >
                 <caption>Пасты</caption>
-                <tr><td>Карбонара.............................................................300гр./<strong>270р.</strong></td></tr>
+                <tr><td>Карбонара.............................................................300гр./<strong>310р.</strong></td></tr>
                 <tr><td class="opis">Бекон, сливки, пармезан, помидоры черри</td></tr>
-                <tr><td>С курицей и грибами........................................300гр./<strong>250р.</strong></td></tr>
+                <tr><td>С курицей и грибами........................................300гр./<strong>290р.</strong></td></tr>
                 <tr><td class="opis">Куриное филе, лук, шампиньоны, сливки, сыр, базилик</td></tr>
             </table>
             <br>
             <table>
                 <caption>Супы</caption>
-                <tr><td>Суп-гуляш с пюре................................................300гр./<strong>250р.</strong></td></tr>
+                <tr><td>Суп-гуляш с пюре................................................300гр./<strong>270р.</strong></td></tr>
                 <tr><td class="opis">Говядина, пюре,томатная паста, морковь, чеснок, лук</td></tr>
-                <tr><td>Лапша....................................................................300гр./<strong>230р.</strong></td></tr>
+                <tr><td>Лапша....................................................................300гр./<strong>260р.</strong></td></tr>
                 <tr><td class="opis">Куриный бульон, лапша домашняя, куриное филе, яйцо, зелень</td></tr>
-                <tr><td>Солянка.................................................................300гр./<strong>250р.</strong></td></tr>
+                <tr><td>Солянка.................................................................300гр./<strong>270р.</strong></td></tr>
                 <tr><td class="opis">Говядина по-европейски, салями, курица, томатная паста,<br> маслины, маринованные огурцы, лук</td></tr>
             </table>
             <br>
             <table>
                 <caption>Горячее</caption>
-                <tr><td>Куриная грудка с овощами гриль.....................300гр./<strong>320р.</strong></td></tr>
+                <tr><td>Куриная грудка с овощами гриль.....................300гр./<strong>360р.</strong></td></tr>
                 <tr><td class="opis">Куриное филе, баклажан, цукини, перец болгарский, томат, <br>шампиньоны, соус брусничный</td></tr>
-                <tr><td>Бефстроганов на картофельном дранике......330гр./<strong>400р.</strong></td></tr>
+                <tr><td>Бефстроганов на картофельном дранике......330гр./<strong>420р.</strong></td></tr>
                 <tr><td class="opis">Говяжья вырезка, шампиньоны, картофель, шпинат,<br>лук, соус Демиглас</td></tr>
-                <tr><td>Оладьи из цукини с семгой...............................270гр./<strong>330р.</strong></td></tr>
+                <tr><td>Оладьи из цукини с семгой...............................270гр./<strong>360р.</strong></td></tr>
                 <tr><td class="opis">Оладьи из цукини, слабосоленая семга,<br> соус Тар-тар</td></tr>
             </table>
             <br>
             <table>
                 <caption>Гарниры</caption>
-                <tr><td>Шампиньоны гриль...........................................180гр./<strong>210р.</strong></td></tr>
+                <tr><td>Шампиньоны гриль...........................................180гр./<strong>230р.</strong></td></tr>
                 <tr><td class="opis"></td></tr>
-                <tr><td>Овощи гриль........................................................150гр./<strong>150р.</strong></td></tr>
+                <tr><td>Овощи гриль........................................................150гр./<strong>190р.</strong></td></tr>
                 <tr><td class="opis">Кабачок, баклажан, цветная капуста, лук, <br>болгарский перец</td></tr>
-                <tr><td>Рис с овощами....................................................150гр./<strong>100р.</strong></td></tr>
+                <tr><td>Рис с овощами....................................................150гр./<strong>130р.</strong></td></tr>
                 <tr><td class="opis">Рис, цукини, болгарский перец, лук</td></tr>
             </table>
             <br>
@@ -152,25 +152,25 @@
             <br>
             <table>
                 <caption>Фруктовый чай</caption>
-                <tr><td>Нахальный фрукт.......................................800мл./<strong>270р.</strong></td></tr>
+                <tr><td>Нахальный фрукт.......................................800мл./<strong>290р.</strong></td></tr>
                 <tr><td class="opis">Фруктовая смесь из кусочков ананаса и папайи в сахаре,<br> яблок, изюма, плодов шиповника, ягод вишни<br>с добавлением лепестков каркаде </td></tr>
-                <tr><td>Каркаде..........................................................800мл./<strong>270р.</strong></td></tr>
+                <tr><td>Каркаде..........................................................800мл./<strong>290р.</strong></td></tr>
                 <tr><td class="opis">Арабский чайный напиток из цветков<br> суданской розы</td></tr
-                <tr><td>Тропики........................................................800мл./<strong>270р.</strong></td></tr>
-                <tr><td class="opis">Фруктовая смесь из кусочков клубники, манго, дыни, ананаса, яблок<br>с добавлением лепестков каркаде и ягод годж</td></tr
+                <tr><td>Тропики........................................................800мл./<strong>290р.</strong></td></tr>
+                <tr><td class="opis">Фруктовая смесь из кусочков клубники, манго, дыни, ананаса, яблок<br>с добавлением лепестков каркаде и ягод годж</td></tr>
             </table>
             <br>
             <table>
                 <caption>Зеленый чай</caption>
                 <tr><td>Ганпаудер......................................................800мл./<strong>270р.</strong></td></tr>
                 <tr><td class="opis">Скрученный китайский зеленый чай</td></tr>
-                <tr><td>Молочный улун............................................800мл./<strong>270р.</strong></td></tr>
+                <tr><td>Молочный улун............................................800мл./<strong>290р.</strong></td></tr>
                 <tr><td class="opis">Листовой зеленый чай с молочным послевкусием</td></tr>
-                <tr><td>Медовая дыня..............................................800мл./<strong>270р.</strong></td></tr>
+                <tr><td>Медовая дыня..............................................800мл./<strong>290р.</strong></td></tr>
                 <tr><td class="opis">Китайский светлый улун с кусочками спелой дыни</td></tr>
-                <tr><td>Дикая вишня................................................800мл./<strong>270р.</strong></td></tr>
+                <tr><td>Дикая вишня................................................800мл./<strong>280р.</strong></td></tr>
                 <tr><td class="opis">Зеленый чай с ягодами спелой вишни, клюквы, <br>листьями клубники и грецкого ореха</td></tr>
-                <tr><td>Жасминовый...............................................800мл./<strong>270р.</strong></td></tr>
+                <tr><td>Жасминовый...............................................800мл./<strong>280р.</strong></td></tr>
                 <tr><td class="opis">Китайский зеленый чай с цветами жасмин</td></tr>
             </table>
             <br>
@@ -180,13 +180,13 @@
                 <tr><td class="opis">Купаж отборных сортов кинийского, индийского<br> и цейлонского чая</td></tr>
                 <tr><td>Эрл грей........................................................800мл./<strong>270р.</strong></td></tr>
                 <tr><td class="opis">Черный чай с добавлением натурального<br> масла бергамота</td></tr>
-                <tr><td>Дикая вишня...............................................800мл./<strong>270р.</strong></td></tr>
+                <tr><td>Дикая вишня...............................................800мл./<strong>290р.</strong></td></tr>
                 <tr><td class="opis">Черный чай с добавлением ягод вишни<br> и листьев клубники</td></tr>
-                <tr><td>Пуэр..............................................................800мл./<strong>270р.</strong></td></tr>
+                <tr><td>Пуэр..............................................................800мл./<strong>290р.</strong></td></tr>
                 <tr><td class="opis">Классический китайский черный пуэр</td></tr>
-                <tr><td>Вишнёвый пуэр.........................................800мл./<strong>270р.</strong></td></tr>
+                <tr><td>Вишнёвый пуэр.........................................800мл./<strong>290р.</strong></td></tr>
                 <tr><td class="opis">Китайский черный пуэр с кусочками ягод вишни</td></tr>
-                <tr><td>С чабрецом.................................................800мл./<strong>270р.</strong></td></tr>
+                <tr><td>С чабрецом.................................................800мл./<strong>280р.</strong></td></tr>
                 <tr><td class="opis">Индийский чай  с добавлением душистого чабреца</td></tr>
             </table>
             <br>
@@ -208,25 +208,25 @@
             <br>
             <table>
                 <caption>Прохладительные напитки</caption>
-                <tr><td>Фирменные лимонады............................1000мл./<strong>250р.</strong></td></tr>
+                <tr><td>Фирменные лимонады............................1000мл./<strong>310р.</strong></td></tr>
                 <tr><td class="opis">Сироп на выбор</td></tr>
-                <tr><td>Сок Rich............................................................200мл./<strong>75р.</strong></td></tr>
+                <tr><td>Сок Rich............................................................200мл./<strong>80р.</strong></td></tr>
                 <tr><td class="opis">На выбор: апельсин, яблоко, вишня, персик, ананас, грейпфрут, виноград</td></tr>
-                <tr><td>Coca-cola, Fanta, Sprite...............................330мл./<strong>150р.</strong></td></tr>
+                <tr><td>Coca-cola, Fanta, Sprite...............................330мл./<strong>170р.</strong></td></tr>
                 <tr><td class="opis"></td></tr>
             </table>
             <br>
             <table>
                 <caption>Пиво</caption>
-                <tr><td>Krusovice светлое.........................................450мл./<strong>180р.</strong></td></tr>
+                <tr><td>Krusovice светлое.........................................450мл./<strong>210р.</strong></td></tr>
                 <tr><td class="opis"></td></tr>
-                <tr><td>Heineken.........................................................450мл./<strong>180р.</strong></td></tr>
+                <tr><td>Heineken.........................................................450мл./<strong>210р.</strong></td></tr>
                 <tr><td class="opis"></td></tr>
-                <tr><td>Heineken 0.0..................................................450мл./<strong>180р.</strong></td></tr>
+                <tr><td>Heineken 0.0..................................................450мл./<strong>210р.</strong></td></tr>
                 <tr><td class="opis"></td></tr>
-                <tr><td>Somersby........................................................400мл./<strong>180р.</strong></td></tr>
+                <tr><td>Somersby........................................................400мл./<strong>210р.</strong></td></tr>
                 <tr><td class="opis"></td></tr>
-                <tr><td>Kozel темный................................................450мл./<strong>180р.</strong></td></tr>
+                <tr><td>Kozel темный................................................450мл./<strong>210р.</strong></td></tr>
             </table>
         </main>
     </body>
