--- a/index.html
+++ b/index.html
@@ -113,40 +113,40 @@
             <br>
             <table>
                 <caption>Коктейли</caption>
-                <tr><td>Глюкоза.............................................................250мл./<strong>250р.</strong></td></tr>
+                <tr><td>Глюкоза.............................................................250мл./<strong>290р.</strong></td></tr>
                 <tr><td class="opis">Спрайт, лимон, лайм, лимонный сок, грейпфрутовый сок,<br> сироп Блю Кюрасао, лед</td></tr>
-                <tr><td>Аскорбинка......................................................250мл./<strong>170р.</strong></td></tr>
+                <tr><td>Аскорбинка......................................................250мл./<strong>210р.</strong></td></tr>
                 <tr><td class="opis">Клюквенный сок, анансовый сок, лед, мята, сироп</td></tr>
-                <tr><td>Фруктоза..........................................................250мл./<strong>250р.</strong></td></tr>
+                <tr><td>Фруктоза..........................................................250мл./<strong>290р.</strong></td></tr>
                 <tr><td class="opis">Персиковый сок, апельсиновый фреш, сок лайма, мед, лед</td></tr>
-                <tr><td>Ранасмурфин...................................................250мл./<strong>180р.</strong></td></tr>
+                <tr><td>Ранасмурфин...................................................250мл./<strong>220р.</strong></td></tr>
                 <tr><td class="opis">Сироп лаванда, сок лайма, содовая, <br>сушеная лаванда, лед</td></tr>
-                <tr><td>Кальциум..........................................................250мл./<strong>250р.</strong></td></tr>
+                <tr><td>Кальциум..........................................................250мл./<strong>290р.</strong></td></tr>
                 <tr><td class="opis">Апельсиновый сок, сироп маракуйя, содовая,<br>сок лайма, сок лимона, апельсин, мята, лед</td></tr>
-                <tr><td>Каогуляция.......................................................250мл/<strong>300р.</strong></td></tr>
+                <tr><td>Коагуляция.......................................................250мл/<strong>310р.</strong></td></tr>
                 <tr><td class="opis">Сироп клубника, апельсиновый сок, <br>ананасовый сок</td></tr>
-                <tr><td>Феррум..............................................................250мл./<strong>250р.</strong></td></tr>
+                <tr><td>Феррум..............................................................250мл./<strong>290р.</strong></td></tr>
                 <tr><td class="opis">Виноградный сок, сироп сахар, лайм, содовая, лед</td></tr>
-                <tr><td>Витамин А........................................................250мл./<strong>300р.</strong></td></tr>
+                <tr><td>Витамин А........................................................250мл./<strong>320р.</strong></td></tr>
                 <tr><td class="opis">Апельсиновый сок, вишневый сок,<br>содовая, лед</td></tr>
-                <tr><td>Витамин С.......................................................250мл./<strong>300р.</strong></td></tr>
+                <tr><td>Витамин С.......................................................250мл./<strong>320р.</strong></td></tr>
                 <tr><td class="opis">Сироп малина, грейпфрутовый сок, <br>взбитые сливки, содовая</td></tr>
-                <tr><td>Фолиевая кислота..........................................250мл./<strong>200р.</strong></td></tr>
+                <tr><td>Фолиевая кислота..........................................250мл./<strong>240р.</strong></td></tr>
                 <tr><td class="opis">Спрайт, лайм, мята, сироп сахар, лед</td></tr>
                 
             </table>
             <br>
             <table>
                 <caption>Смузи</caption>
-                <tr><td>Иммунитет.......................................................250мл./<strong>250р.</strong></td></tr>
+                <tr><td>Иммунитет.......................................................250мл./<strong>310р.</strong></td></tr>
                 <tr><td class="opis">Анансовый сок, апельсиновый сок, клубника,<br>ежевика, малина, черника, мята, сок лимона,<br>сироп гранат</td></tr>
-                <tr><td>Марганец..........................................................250мл./<strong>250р.</strong></td></tr>
+                <tr><td>Марганец..........................................................250мл./<strong>310р.</strong></td></tr>
                 <tr><td class="opis">Яблочный сок, клубника, банан, лед</td></tr>
-                <tr><td>Вульфенит........................................................250мл./<strong>250р.</strong></td></tr>
+                <tr><td>Вульфенит........................................................250мл./<strong>310р.</strong></td></tr>
                 <tr><td class="opis">Грейпфрут, мята, мед, лед</td></tr>
-                <tr><td>Малахит............................................................250мл./<strong>250р.</strong></td></tr>
+                <tr><td>Малахит............................................................250мл./<strong>310р.</strong></td></tr>
                 <tr><td class="opis">Персиковый сок, киви, сахарная пудра, корица</td></tr>
-                <tr><td >Александрит....................................................250мл./<strong>250р.</strong></td></tr>
+                <tr><td >Александрит....................................................250мл./<strong>310р.</strong></td></tr>
                 <tr><td class="opis">Малина, груша, яблоко, молоко, мед</td></tr>
             </table>
             <br>
@@ -192,17 +192,17 @@
             <br>
             <table>
                 <caption>Милкшейки</caption>
-                <tr><td>Вольфрам.......................................................250мл./<strong>250р.</strong></td></tr>
+                <tr><td>Вольфрам.......................................................250мл./<strong>320р.</strong></td></tr>
                 <tr><td class="opis">Мороженое, молоко, печенье, смородина, <br>сироп сахар, какао, мята, корица палочкой,<br>взбитые сливки</td></tr>
-                <tr><td>Калий...............................................................250мл./<strong>250р.</strong></td></tr>
+                <tr><td>Калий...............................................................250мл./<strong>320р.</strong></td></tr>
                 <tr><td class="opis">Мороженое, молоко, сироп блю кюрасао, <br>сироп гранат, банан, малина, мармелад,<br>взбитые сливки</td></tr>
-                <tr><td>Бром.................................................................250мл./<strong>250р.</strong></td></tr>
+                <tr><td>Бром.................................................................250мл./<strong>320р.</strong></td></tr>
                 <tr><td class="opis">Клубника, молоко, мороженое, банан, сироп малина</td></tr>
-                <tr><td>Цирконий.......................................................250мл./<strong>250р.</strong></td></tr>
+                <tr><td>Цирконий.......................................................250мл./<strong>320р.</strong></td></tr>
                 <tr><td class="opis">Молоко, мороженое, сироп карамель,<br> киви, банан</td></tr>
-                <tr><td>Олово...............................................................250мл./<strong>250р.</strong></td></tr>
+                <tr><td>Олово...............................................................250мл./<strong>320р.</strong></td></tr>
                 <tr><td class="opis">Мороженое, молоко, ореховый сироп,<br> орео, какао</td></tr>
-                <tr><td>Родий...............................................................250мл./<strong>250р.</strong></td></tr>
+                <tr><td>Родий...............................................................250мл./<strong>320р.</strong></td></tr>
                 <tr><td class="opis">Мороженое, молоко, ежевика,<br> взбитые сливки</td></tr>
             </table>
             <br>
